   deactivating the foreign function interface when the compiler does not
   support inline assembly with the GCC syntax and libffi is not available.

 - In a multithreaded ECL, when handling a Ctr-C/SIGINT asynchronous interrupt,
   there was not always a CONTINUE restart available.

 - The cygwin port was broken because LOAD was unable to load and execute
   binary files.

* Sockets:

 - The socket option TCP_NODELAY option used the wrong interface: SOL_SOCKET
   instead of IPPROTO_TCP (Chun Tian)

 - sockopt-linger and (setf sockopt-linger) now work as they should, using
   the struct linger argument (M. Mondor)

* ASDF:

 - ASDF:MAKE-BUILD now accepts also a :PROLOGUE-CODE argument with code to
   be executed before all lisp files are run.

 - C:BUILDER's argument :PROLOGUE-CODE can now be a lisp form and in the case
   of standalone programs it is always executed after cl_boot() has been
   invoked.

ECL 9.10.2:
===========

* Bugs fixed:

 - Fixed typo in src/c/unixint.d that affected single-threaded builds

 - The GMP library did not build in OS X Snow Leopard in 64-bits mode.

 - The package MP is needed also in single-threaded versions (for fake
   mp:with-lock, which is used in CLX).

 - In CLX, there were a couple of typos in the code related to locks and ECL.
   These typos only revealed in multithreaded builds of the CLX library.

 - In Linux there is a problem with handlers for SIGFPE being totally ignored
   by the system. The problem seems to be solved by avoiding the use of
   feenableexcept() and restricting to C99 exception tests. That is bad because
   we can not reliably and cheaply detect underflow exceptions.

 - Under OS X, --enable-rpath works again. It was broken for about a year
   due to my misunderstanding of how -install_name works and the differences
   between that and -rpath.

ECL 9.10.1:
===========

* Configuration flags:

 - The option --enable-slow-config is now always on in Solaris and it does not